<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Samma3ni</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_read_sms">Read SMS</string>
    <string name="phoneNumber">To</string>
    <string name="messageBody">Message</string>
    <string name="sendButton">Envoyer</string>
    <string name="title_section1">Emergency Call</string>
    <string name="title_section2">Send</string>
    <string name="title_section3">Dictionnary</string>
    <string name="title_activity_read_message">New message</string>
    <string name="app_version">v0.1</string>
    <string name="app_developers">Developed By :\nBedis ElAcheche,\nKhoubeib Tlili,\nMeriem Selmi</string>
    <string name="app_year">© 2014</string>
    <string name="club_name">INSAT ANDROID CLUB</string>
    <string name="club_website">www.insatandroidclub.org</string>

</resources>
